--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "uuidv4": "^6.2.13",
     "viem": "^1.10.8",
     "wagmi": "^1.4.1"
   }
