--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@jpmorganchase/onyx-ssi-sdk": "^0.0.1",
+    "@magic-ext/auth": "^1.6.0",
+    "@magic-ext/oauth": "^12.6.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@tableland/sdk": "^4.5.1",
@@ -23,15 +26,18 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "ethers": "^6.7.1",
+    "magic-sdk": "^18.6.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "redstone-api": "^0.4.11",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "uuidv4": "^6.2.13",
     "viem": "^1.10.8",
-    "wagmi": "^1.4.1"
+    "wagmi": "^1.4.1",
+    "web3": "^4.0.2"
   }
 }
